fix: adjust header spacing

--- a/src/ovhcloud-light-theme/header.less
+++ b/src/ovhcloud-light-theme/header.less
@@ -1,5 +1,6 @@
 .page-header {
     background: @background-color;
+    padding: 1.25rem 3rem;
 
     h1 {
         font-size: 36px;
@@ -12,6 +13,8 @@
 .nav.nav-tabs {
     border-bottom: 1px solid rgb(230, 245, 252);
     background: @background-color;
+    margin: 0 3rem;
+    padding: 0;
 
     > li,
     > li.active {
